Fix invisible AI search icon
- Changed font-weight from 300 to 400 to make icon visible
- Replaced -webkit-font-smoothing with opacity: 0.9 for subtle effect
- FontAwesome icons may not support very light font weights

--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -74,8 +74,8 @@
             font-size: 28px;
             margin-left: -18px;
             margin-top: 2px;
-            font-weight: 300;
-            -webkit-font-smoothing: antialiased;
+            font-weight: 400;
+            opacity: 0.9;
           }
           
           &:hover {
